<resources>
    <string name="app_name_favcy">Favcy</string>
    <string name="action_settings_favcy">Settings</string>

    <string name="check_in_favcy">CHECK IN</string>
    <string name="powered_by_favcy">Powered by</string>

    <string name="verify_favcy_button">VERIFY</string>
    <string name="otp_favcy_button">Get OTP</string>


    <string name="login_failed_favcy">Login failed.</string>
    <string name="login_canceled_favcy">Login canceled.</string>
    <string name="correct_mobile_number_notification_favcy">Enter correct mobile number.</string>
    <string name="correct_email_id_notification_favcy">Enter correct email id.</string>

    <string name="verify_favcy_email_id">Email ID</string>
    <string name="verify_favcy_mobile_number">Mobile Number</string>
    <string name="otp_favcy">Enter Your OTP</string>

    <string name="login_with_facebook_favcy">LOGIN WITH FACEBOOK</string>
    <string name="network_connection_error_favcy">No network connection found.</string>
    <string name="login_with_twitter_favcy">LOGIN WITH TWITTER</string>

    <string name="please_wait_favcy">Please wait...</string>
    <string name="verifying_favcy">Verifying...</string>

    <string name="check_in_description_favcy">Favcy is a standard for social currency and a wallet for holding social coins.</string>

    <color name="white_color_favcy">#FFFFFF</color>
    <color name="black_color_favcy">#000000</color>
    <color name="dark_green_color_favcy">#338D11</color>
    <color name="facebook_bt_color_favcy">#3B5998</color>
    <color name="twitter_bt_color_favcy">#55ACEE</color>

    <string name="title_activity_favcy_registration">"Favcy"</string>
    <string name="title_activity_favcy_verify">FavcyVerify</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="verification_code_favcy">Enter Verification Code</string>
    <string name="title_activity_favcy__shop">Favcy_Shop</string>
    <string name="facebook_app_id">1242994599059686</string>
    <string name="facebook_app_name">stgfavcy</string>
</resources>
