<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/dark_green_color_favcy"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:src="@drawable/favcylogo" />
    </LinearLayout>

    <EditText
        android:id="@+id/favcymobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/verify_favcy_mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/favcyemail"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    <EditText
        android:id="@+id/favcyemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/verify_favcy_email_id"
        android:inputType="textEmailAddress"
        android:maxLength="80"
        android:layout_centerVertical="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignLeft="@+id/favcymobile"
        android:layout_alignStart="@+id/favcymobile">

        <requestFocus></requestFocus>
    </EditText>

    <Button
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_green_color_favcy"
        android:text="@string/verify_favcy_button"
        android:textColor="@color/white_color_favcy"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/everify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/favcyemail"
        android:layout_alignEnd="@+id/favcyemail"
        android:layout_alignRight="@+id/favcyemail"
        android:layout_alignTop="@+id/favcyemail"
        android:autoText="false"
        android:gravity="center_vertical"
        android:text="Verify"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/dark_green_color_favcy" />

    <TextView
        android:id="@+id/mverify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/favcymobile"
        android:layout_alignEnd="@+id/favcymobile"
        android:layout_alignRight="@+id/favcymobile"
        android:gravity="center_vertical"
        android:text="Verify"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/dark_green_color_favcy"
        android:layout_alignTop="@+id/favcymobile" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/profile_pic"
        android:src="@drawable/profile"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/imageloader"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profile_pic"
        android:layout_centerHorizontal="true"
        android:indeterminate="false">
    </ProgressBar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Please verify Email &amp; Mobile to to authorize your group_name membership"
        android:id="@+id/verifytext"
        android:paddingBottom="10dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_above="@+id/favcyemail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
